rocksdb/rocksdb/lib/librocksdb.nim


proc rocksdb_backup_engine_options_create*(backup_dir: cstring): ptr rocksdb_backup_engine_options_t {.
    cdecl, importc: "rocksdb_backup_engine_options_create", dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_backup_dir*(
    options: ptr rocksdb_backup_engine_options_t; backup_dir: cstring) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_backup_dir", dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_env*(
    options: ptr rocksdb_backup_engine_options_t; env: ptr rocksdb_env_t) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_env", dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_share_table_files*(
    options: ptr rocksdb_backup_engine_options_t; val: uint8) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_share_table_files",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_share_table_files*(
    options: ptr rocksdb_backup_engine_options_t): uint8 {.cdecl,
    importc: "rocksdb_backup_engine_options_get_share_table_files",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_sync*(
    options: ptr rocksdb_backup_engine_options_t; val: uint8) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_sync", dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_sync*(
    options: ptr rocksdb_backup_engine_options_t): uint8 {.cdecl,
    importc: "rocksdb_backup_engine_options_get_sync", dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_destroy_old_data*(
    options: ptr rocksdb_backup_engine_options_t; val: uint8) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_destroy_old_data",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_destroy_old_data*(
    options: ptr rocksdb_backup_engine_options_t): uint8 {.cdecl,
    importc: "rocksdb_backup_engine_options_get_destroy_old_data",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_backup_log_files*(
    options: ptr rocksdb_backup_engine_options_t; val: uint8) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_backup_log_files",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_backup_log_files*(
    options: ptr rocksdb_backup_engine_options_t): uint8 {.cdecl,
    importc: "rocksdb_backup_engine_options_get_backup_log_files",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_backup_rate_limit*(
    options: ptr rocksdb_backup_engine_options_t; limit: uint64) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_backup_rate_limit",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_backup_rate_limit*(
    options: ptr rocksdb_backup_engine_options_t): uint64 {.cdecl,
    importc: "rocksdb_backup_engine_options_get_backup_rate_limit",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_restore_rate_limit*(
    options: ptr rocksdb_backup_engine_options_t; limit: uint64) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_restore_rate_limit",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_restore_rate_limit*(
    options: ptr rocksdb_backup_engine_options_t): uint64 {.cdecl,
    importc: "rocksdb_backup_engine_options_get_restore_rate_limit",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_max_background_operations*(
    options: ptr rocksdb_backup_engine_options_t; val: cint) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_max_background_operations",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_max_background_operations*(
    options: ptr rocksdb_backup_engine_options_t): cint {.cdecl,
    importc: "rocksdb_backup_engine_options_get_max_background_operations",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_callback_trigger_interval_size*(
    options: ptr rocksdb_backup_engine_options_t; size: uint64) {.cdecl, importc: "rocksdb_backup_engine_options_set_callback_trigger_interval_size",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_callback_trigger_interval_size*(
    options: ptr rocksdb_backup_engine_options_t): uint64 {.cdecl, importc: "rocksdb_backup_engine_options_get_callback_trigger_interval_size",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_max_valid_backups_to_open*(
    options: ptr rocksdb_backup_engine_options_t; val: cint) {.cdecl,
    importc: "rocksdb_backup_engine_options_set_max_valid_backups_to_open",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_max_valid_backups_to_open*(
    options: ptr rocksdb_backup_engine_options_t): cint {.cdecl,
    importc: "rocksdb_backup_engine_options_get_max_valid_backups_to_open",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_set_share_files_with_checksum_naming*(
    options: ptr rocksdb_backup_engine_options_t; val: cint) {.cdecl, importc: "rocksdb_backup_engine_options_set_share_files_with_checksum_naming",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_get_share_files_with_checksum_naming*(
    options: ptr rocksdb_backup_engine_options_t): cint {.cdecl, importc: "rocksdb_backup_engine_options_get_share_files_with_checksum_naming",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_options_destroy*(
    a1: ptr rocksdb_backup_engine_options_t) {.cdecl,
    importc: "rocksdb_backup_engine_options_destroy", dynlib: librocksdb.}
##  Checkpoint
